# android_hardware_qcom_camera

./: Android.mk  Makefile.am  configure.ac
QCamera2/: Android.mk  Makefile.am  QCamera2Factory.cpp  QCamera2Hal.cpp
QCamera2/HAL/: Android.mk  Makefile.am  QCamera2HWI.cpp  QCamera2HWI.h  QCamera2HWICallbacks.cpp  QCamera2_Ext.h  QCameraChannel.cpp  QCameraChannel.h  QCameraMem.cpp  QCameraMem.h  QCameraMuxer.cpp  QCameraMuxer.h  QCameraParameters.cpp  QCameraParameters.h  QCameraParametersIntf.cpp  QCameraParametersIntf.h  QCameraPostProc.cpp  QCameraStateMachine.cpp  QCameraStateMachine.h  QCameraStream.cpp  QCameraStream.h
QCamera2/HAL/test/: Android.mk  qcamera_test.cpp
QCamera2/HAL3/: QCamera3Channel.cpp  QCamera3Channel.h  QCamera3HWI.cpp  QCamera3HWI.h  QCamera3PostProc.cpp  QCamera3PostProc.h  QCamera3Stream.cpp  QCamera3Stream.h  QCamera3VendorTags.cpp  QCamera3VendorTags.h
QCamera2/HAL3/test/: QCameraHAL3Base.h
QCamera2/stack/: Makefile.am  configure.ac
QCamera2/stack/common/: cam_intf.h  cam_types.h  mm_camera_interface.h
QCamera2/stack/mm-camera-interface/: Android.mk  Makefile.am
QCamera2/stack/mm-camera-interface/inc/: mm_camera.h  mm_camera_dbg.h
QCamera2/stack/mm-camera-interface/src/: mm_camera.c  mm_camera_channel.c  mm_camera_interface.c  mm_camera_sock.c  mm_camera_stream.c
QCamera2/stack/mm-camera-test/: Android.mk  Makefile.am
QCamera2/stack/mm-camera-test/inc/: mm_qcamera_app.h  mm_qcamera_dbg.h  mm_qcamera_socket.h
QCamera2/stack/mm-camera-test/src/: mm_qcamera_app.c  mm_qcamera_preview.c  mm_qcamera_rdi.c  mm_qcamera_snapshot.c
QCamera2/stack/mm-jpeg-interface/: Android.mk  Makefile.am
QCamera2/stack/mm-jpeg-interface/inc/: mm_jpeg.h  mm_jpeg_dbg.h
QCamera2/stack/mm-jpeg-interface/src/: mm_jpeg.c  mm_jpeg_interface.c
QCamera2/stack/mm-jpeg-interface/test/: Android.mk
QCamera2/stack/mm-lib2d-interface/: Android.mk
QCamera2/stack/mm-lib2d-interface/src/: mm_lib2d.c
QCamera2/util/: QCameraFOVControl.cpp  QCameraFOVControl.h  QCameraHALPP.h
cameraserver/: Makefile.am
cameraserver/inc/: CameraClient.hpp  CameraClientCommand.h  CameraClientUtil.hpp  CameraServer.hpp
cameraserver/src/: CameraClient.cpp  CameraClientUtil.cpp  CameraServer.cpp  server_test.cpp
libcamera/inc/: camera.h
libcamera/src/: camera_memory.cpp  camera_parameters.cpp  qcamera2.cpp  qcamera2.h
libcamera/test/: camera_test.cpp
mm-image-codec/qomx_core/: Android.mk
msm8998/QCamera2/HAL3/: QCamera3HWI.cpp
usbcamcore/inc/: QCameraUsbPriv.h
usbcamcore/src/: QualcommUsbCamera.cpp
